# crewai-agents

./: .gitignore  test_audit_rag.py  test_both_rag_tools.py  test_echo_rag.py
audit_iq_audit_rag/: .env.example  README.md  pyproject.toml
audit_iq_audit_rag/examples/: __init__.py  example_usage.py
audit_iq_audit_rag/src/audit_iq_audit_rag/: __init__.py  tool.py
audit_iq_audit_rag/tests/: __init__.py  test_tool.py
audit_iq_document_translator/: .env.example  .gitignore  README.md  pyproject.toml  test_blob_workflow.py  translate_and_upload.py
audit_iq_document_translator/documents/: document-translation-sample_es.docx
audit_iq_document_translator/examples/: __init__.py  example_usage.py
audit_iq_document_translator/src/audit_iq_document_translator/: __init__.py  tool.py
audit_iq_document_translator/tests/: __init__.py  test_tool.py
audit_iq_echo_rag/: .env.example  .gitignore  README.md  pyproject.toml
audit_iq_echo_rag/examples/: __init__.py  example_usage.py
audit_iq_echo_rag/src/audit_iq_echo_rag/: __init__.py  tool.py
audit_iq_echo_rag/tests/: __init__.py  test_tool.py
audit_iq_serper/: .env.example  README.md  pyproject.toml
audit_iq_serper/examples/: __init__.py  example_usage.py
audit_iq_serper/src/audit_iq_serper/: __init__.py  tool.py
audit_iq_serper/tests/: __init__.py  test_tool.py
auditiq/: CLAUDE.md  README.md  audit_response.md  pyproject.toml
auditiq/Documents/: document-translation-sample.docx  document-translation-sample_de.docx  document-translation-sample_es_en.docx  ~$cument-translation-sample_es_en.docx
auditiq/src/auditiq/: crew.py  main.py  test_translation_docx.py
auditiq/src/auditiq/config/: agents.yaml  tasks.yaml
auditiq/src/auditiq/tools/: custom_tool.py  documents_helper.py  simple_translation.py
