[project]
name = "audit_iq_document_translator"
version = "1.0.0"
description = "AuditIQ Document Translator Tool - Multi-language document translation using Azure AI Document Translation"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.186.1",
    "azure-ai-translation-document>=1.0.0",
    "azure-core>=1.28.0",
    "azure-storage-blob>=12.19.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "tool"